--- a/Sample Kotlin Demo/app/src/main/res/layout/activity_kotlin.xml
+++ b/Sample Kotlin Demo/app/src/main/res/layout/activity_kotlin.xml
@@ -20,12 +20,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
-        android:layout_marginTop="21dp"
 
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        tools:layout_editor_absoluteY="286dp" />
 
 </android.support.constraint.ConstraintLayout>
